# tree-sitter-qmldir

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  eslint.config.js  go.mod  grammar.js  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-qmldir.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/qmldir/: TreeSitterQmldir.java
bindings/java/test/: TreeSitterQmldirTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qmldir/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: qmldir.h
bindings/swift/TreeSitterQmldir/: qmldir.h
bindings/swift/TreeSitterQmldirTests/: TreeSitterQmldirTests.swift
bindings/zig/: root.zig  test.zig
corpus/: basetypes.txt
example/: qmldir
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basetypes.txt
