[package]
name = "tree-sitter-qmldir"
description = "Qmldir grammar for tree-sitter"
version = "0.1.0"
authors = [
	"Decodetalkers <ShootingStarDragons@protonmail.com>",
	"Amaan Qureshi <amaanq12@gmail.com",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "qmldir"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Decodetalkers/tree-sitter-qmldir"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"
